Change buttons to a

--- a/index.html
+++ b/index.html
@@ -123,48 +123,48 @@
 
         <div class="course">
             <h3>ECE 313</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece313/sp2025/'">
-            Course Website</button>
-            <button onclick="window.location.href='https://www.gradescope.com/courses/961213'">
-            HW Gradescope</button>
+            <a class="btn" href="https://courses.grainger.illinois.edu/ece313/sp2025/">
+            Course Website</a>
+            <a class="btn" href="https://www.gradescope.com/courses/961213">
+            HW Gradescope</a>
             <p>Grade Components: Gradescope HW, In-class Quizzes, Exams</p>
         </div>
         
         <div class="course">
             <h3>ECE 340</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece340/sp2025/index.html'">
-            Course Website</button>
-            <button onclick="window.location.href='https://www.gradescope.com/courses/958839'">
-            HW Gradescope</button>
+            <a class="btn" href="https://courses.grainger.illinois.edu/ece340/sp2025/index.html">
+            Course Website</a>
+            <a class="btn" href="https://www.gradescope.com/courses/958839">
+            HW Gradescope</a>
 
             <p>Grade Components: Gradescope/Canvas Homework, Exams</p>
         </div>
 
         <div class="course">
             <h3>CS 374</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/cs374al1/sp2025/'">
-            Course Website</button>
+            <a class="btn" href="https://courses.grainger.illinois.edu/cs374al1/sp2025/">
+            Course Website</a>
 
-            <button onclick="window.location.href='https://www.gradescope.com/courses/941778'">
-            HW Gradescope</button>
+            <a class="btn" href="https://www.gradescope.com/courses/941778">
+            HW Gradescope</a>
             <p>Grade Components: PrarieLearn & Gradescope HW, Exams</p>
         </div>
 
         <div class="course">
             <h3>ECE 385</h3>
-            <button onclick="window.location.href='https://canvas.illinois.edu/courses/56186'">
-            Canvas Course</button>
+            <a class="btn" href="https://canvas.illinois.edu/courses/56186">
+            Canvas Course</a>
             <p>Grade Components: Labs, Final Projects, Quizzes</p>
         </div>
 
         <div class="course">
             <h3>ECE 486</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece486/sp2025/'">
-            Course Website</button>
-            <button onclick="window.location.href='https://www.gradescope.com/courses/947869'">
-            HW Gradescope</button>
-            <button onclick="window.location.href='https://www.gradescope.com/courses/969657'">
-            Lab Gradescope</button>
+            <a class="btn" href="https://courses.grainger.illinois.edu/ece486/sp2025/">
+            Course Website</a>
+            <a class="btn" href="https://www.gradescope.com/courses/947869">
+            HW Gradescope</a>
+            <a class="btn" href="https://www.gradescope.com/courses/969657">
+            Lab Gradescope</a>
             <p>Grade Components: GradeScope Homework, Lab, Exams </p>
         </div>
 
@@ -176,131 +176,131 @@
         <div class="course">
             <h3>MATH 285</h3>
             <h4>HW: </h4>
-            <button class="btn" onclick="window.location.href='https://us.prairielearn.com/pl/course_instance/147266/assessments'">
+            <a class="btn" href="https://us.prairielearn.com/pl/course_instance/147266/assessments" target="_blank" rel="noopener">
                 <span class="icon pl-icon" aria-label="PrairieLearn">
                     <img src="logos/prairielearn.jpeg" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
                 </span>
                 PraireLearn
-            </button>
+            </a>
             <h4>Question: </h4>
-            <button class="btn" onclick="window.location.href='https://campuswire.com/c/GE4D83E42/feed'">
+            <a class="btn" href="https://campuswire.com/c/GE4D83E42/feed" target="_blank" rel="noopener">
                 <span class="icon campuswire-icon" aria-label="Campuswire">
                     <img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg>
                 </span>
                 CampusWire
-            </button>
+            </a>
             <h4>Info & Video:</h4>
-            <button class="btn" onclick="window.location.href='https://canvas.illinois.edu/courses/44060'">
+            <a class="btn" href="https://canvas.illinois.edu/courses/44060" target="_blank" rel="noopener">
                 <span class="icon canvas-icon" aria-label="Canvas">
                     <img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg>
                 </span>
                 Canvas
-            </button>
+            </a>
             <p>Grade Components: PraireLearn HW + Quiz, Exams</p>
         </div>
         
         <div class="course">
             <h3>MATH 257</h3>
             <h4>HW:</h4>
-            <button class="btn" onclick="window.location.href='https://us.prairielearn.com/pl/course_instance/145582/assessments'">
+            <a class="btn" href="https://us.prairielearn.com/pl/course_instance/145582/assessments" target="_blank" rel="noopener">
                 <span class="icon pl-icon" aria-label="PrairieLearn">
                     <img src="logos/prairielearn.jpeg" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
                 </span>
                 PraireLearn
-            </button>
+            </a>
             <h4>Question:</h4>
-            <button class="btn" onclick="window.location.href='https://campuswire.com/c/GE4D83E42/feed'">
+            <a class="btn" href="https://campuswire.com/c/GE4D83E42/feed" target="_blank" rel="noopener">
                 <span class="icon campuswire-icon" aria-label="Campuswire">
                     <img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg>
                 </span>
                 CampusWire
-            </button>
+            </a>
         </div>
 
         <div class="course">
             <h3>MATH 213</h3>
             <h4> Course Website:</h4>
-            <button class="btn" onclick="window.location.href='https://learn.illinois.edu/course/view.php?id=77090'">
+            <a class="btn" href="https://learn.illinois.edu/course/view.php?id=77090" target="_blank" rel="noopener">
                 <span class="icon moodle-icon" aria-label="Moodle">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">M</text></svg>
                 </span>
                 Moodle
-            </button>
+            </a>
             <h4>Questions:</h4>
-            <button class="btn" onclick="window.location.href='piazza.com/illinois/spring2024/math213e1x1'">
+            <a class="btn" href="piazza.com/illinois/spring2024/math213e1x1" target="_blank" rel="noopener">
                 <span class="icon piazza-icon" aria-label="Piazza">
                     <img src="logos/piazza.png" alt="Piazza Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#00599C"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">P</text></svg>
                 </span>
                 Piazza
-            </button>
+            </a>
             <p>Grade Components: Moodle HW, Exams</p>
         </div>
 
         <div class="course">
             <h3>ECE 220</h3>
             <h4>Course Website:</h4>
-            <button class="btn" onclick="window.location.href='https://courses.grainger.illinois.edu/ece220/sp2024/'">
+            <a class="btn" href="https://courses.grainger.illinois.edu/ece220/sp2024/" target="_blank" rel="noopener">
                 <span class="icon illinois-icon" aria-label="Illinois">
                     <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
                 </span>
                 website
-            </button>
+            </a>
             <h4>HW:</h4>
-            <button class="btn" onclick="window.location.href='https://www.gradescope.com/courses/692259'">
+            <a class="btn" href="https://www.gradescope.com/courses/692259" target="_blank" rel="noopener">
                 <span class="icon gradescope-icon" aria-label="Gradescope">
                     <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
                 </span>
                 GradeScope
-            </button>
+            </a>
             <p>Grade Components: PrairieTest Quiz, MP, Lab(extra credit), Exams</p>
         </div>
 
         <div class="course">
             <h3>ECE 110</h3>
             <h4>Course Website:</h4>
-            <button class="btn" onclick="window.location.href='https://canvas.illinois.edu/courses/42564'">
+            <a class="btn" href="https://canvas.illinois.edu/courses/42564" target="_blank" rel="noopener">
                 <span class="icon canvas-icon" aria-label="Canvas">
                     <img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg>
                 </span>
                 Canvas
-            </button>
+            </a>
             <h4>HW:</h4>
-            <button class="btn" onclick="window.location.href='https://www.gradescope.com/courses/691334'">
+            <a class="btn" href="https://www.gradescope.com/courses/691334" target="_blank" rel="noopener">
                 <span class="icon gradescope-icon" aria-label="Gradescope">
                     <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
                 </span>
                 GradeScope
-            </button>
+            </a>
             <p>Grade Components: Homework(GradeScope, PraireLearn), Lab(30%) Attendance(1%), Quiz, Exams</p>
         </div>
 
         <div class="course">
             <h3>PHYS 213</h3>
             <h4>Course Website:</h4>
-            <button class="btn" onclick="window.location.href='https://courses.physics.illinois.edu/phys213/sp2024/syllabus.html'">
+            <a class="btn" href="https://courses.physics.illinois.edu/phys213/sp2024/syllabus.html" target="_blank" rel="noopener">
                 <span class="icon illinois-icon" aria-label="Illinois">
                     <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
                 </span>
                 Webpage
-            </button>
+            </a>
             <h4>Smart Physics</h4>
-            <button class="btn" onclick="window.location.href='https://smart.physics.illinois.edu/'">
+            <a class="btn" href="https://smart.physics.illinois.edu/" target="_blank" rel="noopener">
                 <span class="icon smartphysics-icon" aria-label="SmartPhysics">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">S</text></svg>
                 </span>
                 Smart physics
-            </button>
+            </a>
         </div>
     </div>
 
