--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         <div class="course">
             <h3><span class="icon ece-icon" aria-label="Circuits"><img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span> ECE 444</h3>
             <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">
-              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
               Course Website
             </a>
             <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">
@@ -40,7 +43,10 @@
         <div class="course">
             <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 490</h3>
             <a href="https://courses.grainger.illinois.edu/ece490/fa2025/index.html" class="btn" target="_blank" rel="noopener">
-              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
               Course Website
             </a>
             <a href="https://piazza.com/class/mehpfpjp9wc3wn" class="btn" target="_blank" rel="noopener">
@@ -74,7 +80,10 @@
               Canvas
             </a>
             <a href="https://courses.grainger.illinois.edu/cs441/fa2025/" class="btn" target="_blank" rel="noopener">
-              <span class="icon illinois-icon" aria-label="Illinois"><img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
               Course Website
             </a>
             <a href="https://campuswire.com/c/GED989902/feed" class="btn" target="_blank" rel="noopener">
@@ -112,7 +121,10 @@
         <div class="course">
             <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 391</h3>
             <a href="https://courses.grainger.illinois.edu/ece391/sp2025/" class="btn" target="_blank" rel="noopener">
-              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
               Course Website
             </a>
             <a href="https://queue.illinois.edu/q/queue/980" class="btn" target="_blank" rel="noopener">
