--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rick Xu - Course Links & Academic Resources</title>
+    <meta name="description" content="Academic course links and resources for Rick Xu's university studies">
     <link rel="stylesheet" href="mystyle.css">
 </head>
 
-
 <body>
-    <a href="https://www.gradescope.com" class="btn" target="_blank" rel="noopener">
-      <span class="icon gradescope-icon" aria-label="Gradescope">
-        <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
-        <!-- fallback SVG if image missing -->
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
-      </span>
-      Gradescope
-    </a>
-    <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">
-      <span class="icon pl-icon" aria-label="PrairieLearn">
-        <img src="logos/prairielearn.jpeg" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
-      </span>
-      PrairieLearn
-    </a>
+    <header>
+        <h1>Academic Course Dashboard</h1>
+        <p>Quick access to course websites and resources</p>
+    </header>
 
-    <h2>Fall 2025 Info and Links</h2>
+    <main>
+        <section class="quick-links">
+            <h2>Quick Access Links</h2>
+            <a href="https://www.gradescope.com" class="btn" target="_blank" rel="noopener">
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              Gradescope
+            </a>
+            <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">
+              <span class="icon pl-icon" aria-label="PrairieLearn">
+                <img src="logos/prairielearn.png" alt="PrairieLearn Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
+              </span>
+              PrairieLearn
+            </a>
+        </section>
+
+        <section class="semester-courses">
+            <h2>Fall 2025 Info and Links</h2>
 
     <div class="courses">
-        <div class="course">
-            <h3><span class="icon ece-icon" aria-label="Circuits"><img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span> ECE 444</h3>
-            <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">
-              <span class="icon illinois-icon" aria-label="Illinois">
-                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
-              </span>
-              Course Website
-            </a>
-            <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">
-              <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
-              Canvas
-            </a>
-        </div>
+            <div class="course">
+                <h3><span class="icon ece-icon" aria-label="Circuits"><img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span> ECE 444</h3>
+                <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">
+                  <span class="icon illinois-icon" aria-label="Illinois">
+                    <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+                  </span>
+                  Course Website
+                </a>
+                <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">
+                  <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+                  Canvas
+                </a>
+            </div>
 
         <div class="course">
             <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 490</h3>
@@ -99,9 +111,10 @@
               Canvas
             </a>
         </div>
-    </div>
+        </section>
 
-    <h2>Spring 2025 Info and Links</h2>
+        <section class="semester-courses">
+            <h2>Spring 2025 Info and Links</h2>
 
     <div class="courses"> 
         <div class="course">
@@ -134,55 +147,105 @@
         </div>
 
         <div class="course">
-            <h3>ECE 313</h3>
+            <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 313</h3>
             <a class="btn" href="https://courses.grainger.illinois.edu/ece313/sp2025/">
-            Course Website</a>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
+              Course Website
+            </a>
             <a class="btn" href="https://www.gradescope.com/courses/961213">
-            HW Gradescope</a>
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              HW Gradescope
+            </a>
             <p>Grade Components: Gradescope HW, In-class Quizzes, Exams</p>
         </div>
         
         <div class="course">
-            <h3>ECE 340</h3>
+            <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 340</h3>
             <a class="btn" href="https://courses.grainger.illinois.edu/ece340/sp2025/index.html">
-            Course Website</a>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
+              Course Website
+            </a>
             <a class="btn" href="https://www.gradescope.com/courses/958839">
-            HW Gradescope</a>
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              HW Gradescope
+            </a>
 
             <p>Grade Components: Gradescope/Canvas Homework, Exams</p>
         </div>
 
         <div class="course">
-            <h3>CS 374</h3>
+            <h3><span class="icon cs-icon" aria-label="Computer Science"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="5" y="5" width="10" height="10" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> CS 374</h3>
             <a class="btn" href="https://courses.grainger.illinois.edu/cs374al1/sp2025/">
-            Course Website</a>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
+              Course Website
+            </a>
 
             <a class="btn" href="https://www.gradescope.com/courses/941778">
-            HW Gradescope</a>
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              HW Gradescope
+            </a>
             <p>Grade Components: PrarieLearn & Gradescope HW, Exams</p>
         </div>
 
         <div class="course">
-            <h3>ECE 385</h3>
+            <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 385</h3>
             <a class="btn" href="https://canvas.illinois.edu/courses/56186">
-            Canvas Course</a>
+              <span class="icon canvas-icon" aria-label="Canvas">
+                <img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg>
+              </span>
+              Canvas Course
+            </a>
             <p>Grade Components: Labs, Final Projects, Quizzes</p>
         </div>
 
         <div class="course">
-            <h3>ECE 486</h3>
+            <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 486</h3>
             <a class="btn" href="https://courses.grainger.illinois.edu/ece486/sp2025/">
-            Course Website</a>
+              <span class="icon illinois-icon" aria-label="Illinois">
+                <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+              </span>
+              Course Website
+            </a>
             <a class="btn" href="https://www.gradescope.com/courses/947869">
-            HW Gradescope</a>
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              HW Gradescope
+            </a>
             <a class="btn" href="https://www.gradescope.com/courses/969657">
-            Lab Gradescope</a>
+              <span class="icon gradescope-icon" aria-label="Gradescope">
+                <img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+              </span>
+              Lab Gradescope
+            </a>
             <p>Grade Components: GradeScope Homework, Lab, Exams </p>
         </div>
+        </section>
 
-    </div>
-
-    <h2>Spring 2024 Info and Links</h2>
+        <section class="semester-courses">
+            <h2>Spring 2024 Info and Links</h2>
 
     <div class="courses">
         <div class="course">
@@ -244,7 +307,7 @@
                 Moodle
             </a>
             <h4>Questions:</h4>
-            <a class="btn" href="piazza.com/illinois/spring2024/math213e1x1" target="_blank" rel="noopener">
+            <a class="btn" href="https://piazza.com/illinois/spring2024/math213e1x1" target="_blank" rel="noopener">
                 <span class="icon piazza-icon" aria-label="Piazza">
                     <img src="logos/piazza.png" alt="Piazza Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#00599C"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">P</text></svg>
@@ -314,7 +377,11 @@
                 Smart physics
             </a>
         </div>
-    </div>
+        </section>
+    </main>
 
+    <footer>
+        <p>&copy; 2025 Rick Xu - Academic Dashboard</p>
+    </footer>
 </body>
 </html>
