--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               Gradescope
             </a>
             <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">
-              <span class="icon pl-icon" aria-label="PrairieLearn">
+              <span class="icon pl-icon" aria-label="Prai rieLearn">
                 <img src="logos/prairielearn.png" alt="PrairieLearn Logo" class="platform-logo">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
               </span>
@@ -253,7 +253,7 @@
             <h4>HW: </h4>
             <a class="btn" href="https://us.prairielearn.com/pl/course_instance/147266/assessments" target="_blank" rel="noopener">
                 <span class="icon pl-icon" aria-label="PrairieLearn">
-                    <img src="logos/prairielearn.jpeg" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                    <img src="logos/prairielearn.png" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
                 </span>
                 PraireLearn
@@ -282,7 +282,7 @@
             <h4>HW:</h4>
             <a class="btn" href="https://us.prairielearn.com/pl/course_instance/145582/assessments" target="_blank" rel="noopener">
                 <span class="icon pl-icon" aria-label="PrairieLearn">
-                    <img src="logos/prairielearn.jpeg" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
+                    <img src="logos/prairielearn.png" alt="PrairieLearn Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
                 </span>
                 PraireLearn
