--- a/northmichigan/index.html
+++ b/northmichigan/index.html
@@ -197,8 +197,8 @@
                 <th>Notes</th>
             </tr>
             <tr>
-                <td>租车(不含保险)</td>
-                <td>$250 + $150 保险</td>
+                <td>租车</td>
+                <td>$250(不含保险) + $150 保险</td>
                 <td>$70/day × 3 days</td>
             </tr>
             <tr>
