update north michigan iternary

--- a/northmichigan/index.html
+++ b/northmichigan/index.html
@@ -173,11 +173,11 @@
                 <li>☐ 看<a href="https://www.myforecast.com/15-day-forecast.php?cwid=gn4997249&metric=false&city_count=&zip_code=&condition=act&data=2103229252">天气</a>（最低夜里可能10℃），有可能下雨?</li>
                 <li>☐ 准备行李
                     <ul>
-                        <li>☐ 证件（护照+驾照）</li>
-                        <li>☐ 衣服（冲锋衣/雨具）</li>
-                        <li>☐ 食物</li>
-                        <li>☐ 水</li>
-                        <li>☐ 无人机</li>
+                        <li>证件（护照+驾照）</li>
+                        <li>衣服（冲锋衣/雨具）</li>
+                        <li>食物</li>
+                        <li>水</li>
+                        <li>无人机</li>
                     </ul>
                 </li>
                 <li>☐ 景区门票（线下到那边买票）
