--- a/northmichigan/index.html
+++ b/northmichigan/index.html
@@ -142,6 +142,16 @@
             padding: 2px 4px;
             border-radius: 3px;
         }
+        .travel-image {
+            width: 400px;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            margin: 15px 0;
+        }
+        .travel-image.small-margin {
+            margin-bottom: 10px;
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 10px;
@@ -156,6 +166,10 @@
             .photo-placeholder {
                 width: 100%;
                 height: 200px;
+            }
+            .travel-image {
+                width: 100%;
+                max-width: 100%;
             }
         }
     </style>
@@ -288,7 +302,7 @@
             <p>Copper Peak: <span class="cost">$28</span> (includes chair lift + elevator to the top)</p>
 
             <div class="map-container">
-                <img src="images/image_8.jpg" alt="Copper Peak" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                <img src="images/image_8.jpg" alt="Copper Peak" class="travel-image">
             </div>
 
             <p><span class="time">3:30pm</span> Copper Peak 出发 → <span class="location">Presque Isle River Waterfalls</span> (45min)</p>
@@ -300,7 +314,7 @@
             <p>这条小河附近有几个瀑布，远一点可以走到Lake Superior湖边。</p>
 
             <div class="map-container">
-                <img src="images/image-2.png" alt="Presque Isle River Waterfalls" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                <img src="images/image-2.png" alt="Presque Isle River Waterfalls" class="travel-image">
             </div>
 
             <p><span class="time">5pm</span> Presque Isle River Waterfalls 出发 → <span class="location">Lake of the Clouds</span> (1h20min)</p>
@@ -310,11 +324,11 @@
             <p><span class="time">6:30pm</span> 夕阳前到Lake of the Clouds （日落19:30）</p>
 
             <div class="map-container">
-                <img src="images/image-1.png" alt="Lake of the Clouds" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                <img src="images/image-1.png" alt="Lake of the Clouds" class="travel-image">
             </div>
 
             <div class="map-container">
-                <img src="images/image_9.jpg" alt="Lake of the Clouds Sunset" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                <img src="images/image_9.jpg" alt="Lake of the Clouds Sunset" class="travel-image">
             </div>
 
             <p><span class="time">7:30pm</span> 看完夕阳从Lake of the Clouds出发到Houghton (1hr20min) 吃晚饭，吃完住附近Airbnb。目前看到旁边的小镇Calumet (20min drive)有不错的3人可以住的小房子。</p>
@@ -331,8 +345,8 @@
             <div class="option">
                 <h4>Option 1: <a href="https://www.airbnb.com/rooms/1487886039955498255">Tanya</a></h4>
                 <div class="map-container">
-                    <img src="images/image-4.png" alt="Tanya's House - Exterior" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-bottom: 10px;">
-                    <img src="images/image-5.png" alt="Tanya's House - Interior" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                    <img src="images/image-4.png" alt="Tanya's House - Exterior" class="travel-image small-margin">
+                    <img src="images/image-5.png" alt="Tanya's House - Interior" class="travel-image">
                 </div>
                 <p>应该是独立房子，$183/晚</p>
             </div>
@@ -340,7 +354,7 @@
             <div class="option">
                 <h4>Option 2: <a href="https://www.airbnb.com/rooms/51655770">Michele</a></h4>
                 <div class="map-container">
-                    <img src="images/image-3.png" alt="Michele's Shared Space" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                    <img src="images/image-3.png" alt="Michele's Shared Space" class="travel-image">
                 </div>
                 <p>需要跟别人share厨房和卫生间，$115/晚</p>
             </div>
@@ -352,7 +366,7 @@
             <p><span class="time">9:30am</span> Calumet/Houghton → <span class="location">Copper Harbor</span> (45min)</p>
 
             <div class="map-container">
-                <img src="images/image-7.png" alt="Brockway Mountain Drive" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                <img src="images/image-7.png" alt="Brockway Mountain Drive" class="travel-image">
             </div>
             <p><em>Photo taken at Brockway Mountain Drive</em></p>
 
