Adds spring 2026 links

--- a/index.html
+++ b/index.html
@@ -378,6 +378,41 @@
             </a>
         </div>
         </section>
+
+        <section id="spring-2026">
+    <h2>Spring 2026 Courses</h2>
+    <h3>ECE448</h3>
+    <ul>
+        <li><a href="https://courses.grainger.illinois.edu/ece448/sp2026/">Website</a></li>
+        <li><a href="https://www.gradescope.com/courses/1205353">Gradescope</a></li>
+        <li><a href="https://campuswire.com/c/G490A8A0C/feed">Campuswire</a></li>
+    </ul>
+    <h3>ECE498</h3>
+    <ul>
+        <li><a href="https://www.gradescope.com/courses/1235093">Gradescope</a></li>
+        <li><a href="https://campuswire.com/c/G1D2D3D1F/feed">Campuswire</a></li>
+        <li><a href="https://rrc-uiuc.notion.site/gen-models-sp26">Website</a></li>
+    </ul>
+    <h3>ECE411</h3>
+    <ul>
+        <li><a href="https://canvas.illinois.edu/courses/66593">Canvas</a></li>
+        <li><a href="https://courses.grainger.illinois.edu/ECE411/sp2026/">Website</a></li>
+        <li><a href="https://github.com/illinois-cs-coursework/sp26_ece411_.release">GitHub Release Repo</a></li>
+        <li><a href="https://campuswire.com/c/G881907F5/feed">Campuswire</a></li>
+    </ul>
+    <h3>BTW250</h3>
+    <ul>
+        <li>Canvas: TBD</li>
+    </ul>
+    <h3>MUS133</h3>
+    <ul>
+        <li><a href="https://canvas.illinois.edu/courses/65073">Canvas</a></li>
+    </ul>
+    <h3>ECE391 CA</h3>
+    <ul>
+        <li><a href="https://queue.illinois.edu/q/queue/1138">Queue</a></li>
+    </ul>
+</section>
     </main>
 
     <footer>
