--- a/index.html
+++ b/index.html
@@ -34,6 +34,94 @@
         </section>
 
         <section class="semester-courses">
+            <h2>Spring 2026 Info and Links</h2>
+
+    <div class="courses">
+            <div class="course">
+                <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 448</h3>
+                <a href="https://courses.grainger.illinois.edu/ece448/sp2026/" class="btn" target="_blank" rel="noopener">
+                  <span class="icon illinois-icon" aria-label="Illinois">
+                    <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+                  </span>
+                  Website
+                </a>
+                <a href="https://www.gradescope.com/courses/1205353" class="btn" target="_blank" rel="noopener">
+                  <span class="icon gradescope-icon" aria-label="Gradescope"><img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg></span>
+                  Gradescope
+                </a>
+                <a href="https://campuswire.com/c/G490A8A0C/feed" class="btn" target="_blank" rel="noopener">
+                  <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
+                  Campuswire
+                </a>
+            </div>
+
+            <div class="course">
+                <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 498</h3>
+                <a href="https://www.gradescope.com/courses/1235093" class="btn" target="_blank" rel="noopener">
+                  <span class="icon gradescope-icon" aria-label="Gradescope"><img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg></span>
+                  Gradescope
+                </a>
+                <a href="https://campuswire.com/c/G1D2D3D1F/feed" class="btn" target="_blank" rel="noopener">
+                  <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
+                  Campuswire
+                </a>
+                <a href="https://rrc-uiuc.notion.site/gen-models-sp26" class="btn" target="_blank" rel="noopener">
+                  <span class="icon illinois-icon" aria-label="Illinois">
+                    <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+                  </span>
+                  Website
+                </a>
+            </div>
+
+            <div class="course">
+                <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 411</h3>
+                <a href="https://canvas.illinois.edu/courses/66593" class="btn" target="_blank" rel="noopener">
+                  <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+                  Canvas
+                </a>
+                <a href="https://courses.grainger.illinois.edu/ECE411/sp2026/" class="btn" target="_blank" rel="noopener">
+                  <span class="icon illinois-icon" aria-label="Illinois">
+                    <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
+                  </span>
+                  Website
+                </a>
+                <a href="https://github.com/illinois-cs-coursework/sp26_ece411_.release" class="btn" target="_blank" rel="noopener">
+                  <span class="icon github-icon" aria-label="GitHub"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#333"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">GH</text></svg></span>
+                  GitHub Release Repo
+                </a>
+                <a href="https://campuswire.com/c/G881907F5/feed" class="btn" target="_blank" rel="noopener">
+                  <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
+                  Campuswire
+                </a>
+            </div>
+
+            <div class="course">
+                <h3>BTW 250</h3>
+                <p>Canvas: TBD</p>
+            </div>
+
+            <div class="course">
+                <h3>MUS 133</h3>
+                <a href="https://canvas.illinois.edu/courses/65073" class="btn" target="_blank" rel="noopener">
+                  <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+                  Canvas
+                </a>
+            </div>
+
+            <div class="course">
+                <h3><span class="icon support-icon" aria-label="Support"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12" font-family="Arial" dy=".3em">?</text></svg></span> ECE 391 CA</h3>
+                <a href="https://queue.illinois.edu/q/queue/1138" class="btn" target="_blank" rel="noopener">
+                  <span class="icon queue-icon" aria-label="Queue"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
+                  Queue
+                </a>
+            </div>
+        </div>
+        </section>
+
+        <section class="semester-courses">
             <h2>Fall 2025 Info and Links</h2>
 
     <div class="courses">
@@ -378,41 +466,6 @@
             </a>
         </div>
         </section>
-
-        <section id="spring-2026">
-    <h2>Spring 2026 Courses</h2>
-    <h3>ECE448</h3>
-    <ul>
-        <li><a href="https://courses.grainger.illinois.edu/ece448/sp2026/">Website</a></li>
-        <li><a href="https://www.gradescope.com/courses/1205353">Gradescope</a></li>
-        <li><a href="https://campuswire.com/c/G490A8A0C/feed">Campuswire</a></li>
-    </ul>
-    <h3>ECE498</h3>
-    <ul>
-        <li><a href="https://www.gradescope.com/courses/1235093">Gradescope</a></li>
-        <li><a href="https://campuswire.com/c/G1D2D3D1F/feed">Campuswire</a></li>
-        <li><a href="https://rrc-uiuc.notion.site/gen-models-sp26">Website</a></li>
-    </ul>
-    <h3>ECE411</h3>
-    <ul>
-        <li><a href="https://canvas.illinois.edu/courses/66593">Canvas</a></li>
-        <li><a href="https://courses.grainger.illinois.edu/ECE411/sp2026/">Website</a></li>
-        <li><a href="https://github.com/illinois-cs-coursework/sp26_ece411_.release">GitHub Release Repo</a></li>
-        <li><a href="https://campuswire.com/c/G881907F5/feed">Campuswire</a></li>
-    </ul>
-    <h3>BTW250</h3>
-    <ul>
-        <li>Canvas: TBD</li>
-    </ul>
-    <h3>MUS133</h3>
-    <ul>
-        <li><a href="https://canvas.illinois.edu/courses/65073">Canvas</a></li>
-    </ul>
-    <h3>ECE391 CA</h3>
-    <ul>
-        <li><a href="https://queue.illinois.edu/q/queue/1138">Queue</a></li>
-    </ul>
-</section>
     </main>
 
     <footer>
