fix button size

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     <div class="courses">
             <div class="course">
                 <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 448</h3>
-                <a href="https://campuswire.com/c/G490A8A0C/feed" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://campuswire.com/c/G490A8A0C/feed" class="btn" target="_blank" rel="noopener">
                   <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
                   Campuswire
                 </a>
-                <a href="https://www.gradescope.com/courses/1205353" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://www.gradescope.com/courses/1205353" class="btn" target="_blank" rel="noopener">
                   <span class="icon gradescope-icon" aria-label="Gradescope"><img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg></span>
                   Gradescope
                 </a>
-                <a href="https://courses.grainger.illinois.edu/ece448/sp2026/" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://courses.grainger.illinois.edu/ece448/sp2026/" class="btn" target="_blank" rel="noopener">
                   <span class="icon illinois-icon" aria-label="Illinois">
                     <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
@@ -58,15 +58,15 @@
 
             <div class="course">
                 <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 498</h3>
-                <a href="https://campuswire.com/c/G1D2D3D1F/feed" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://campuswire.com/c/G1D2D3D1F/feed" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
                   Campuswire
                 </a>
-                <a href="https://www.gradescope.com/courses/1235093" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://www.gradescope.com/courses/1235093" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon gradescope-icon" aria-label="Gradescope"><img src="logos/gradescope.png" alt="Gradescope Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg></span>
                   Gradescope
                 </a>
-                <a href="https://rrc-uiuc.notion.site/gen-models-sp26" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://rrc-uiuc.notion.site/gen-models-sp26" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon illinois-icon" aria-label="Illinois">
                     <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
@@ -77,19 +77,19 @@
 
             <div class="course">
                 <h3><span class="icon ece-icon" aria-label="ECE"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">E</text></svg></span> ECE 411</h3>
-                <a href="https://canvas.illinois.edu/courses/66593" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://canvas.illinois.edu/courses/66593" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
                   Canvas
                 </a>
-                <a href="https://campuswire.com/c/G881907F5/feed" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://campuswire.com/c/G881907F5/feed" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
                   Campuswire
                 </a>
-                <a href="https://github.com/illinois-cs-coursework/sp26_ece411_.release" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://github.com/illinois-cs-coursework/sp26_ece411_.release" class="btn" target="_blank" rel="noopener"  >
                   <span class="icon github-icon" aria-label="GitHub"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#333"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">GH</text></svg></span>
                   GitHub Release Repo
                 </a>
-                <a href="https://courses.grainger.illinois.edu/ECE411/sp2026/" class="btn" target="_blank" rel="noopener" style="display: block; margin-bottom: 8px;">
+                <a href="https://courses.grainger.illinois.edu/ECE411/sp2026/" class="btn" target="_blank" rel="noopener" >
                   <span class="icon illinois-icon" aria-label="Illinois">
                     <img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg>
@@ -100,7 +100,10 @@
 
             <div class="course">
                 <h3>BTW 250</h3>
-                <p>Canvas: TBD</p>
+                 <a href="https://canvas.illinois.edu/courses/65380" class="btn" target="_blank" rel="noopener">
+                  <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+                  Canvas
+                </a>
             </div>
 
             <div class="course">
