--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                   <span class="icon queue-icon" aria-label="Course Staff Drive"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
                   Course Staff Drive
                 </a>
+                <a href="https://courses.grainger.illinois.edu/ece391/sp2026/" class="btn" target="_blank" rel="noopener">
+                  <span class="icon queue-icon" aria-label="Course Staff Drive"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
+                  Course Website
+                </a>
             </div>
         </div>
         </section>
