add ece411 github repo

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                   </span>
                   Website
                 </a>
+                <a href="https://github.com/illinois-cs-coursework/sp26_ece411_rickxu2" class="btn" target="_blank" rel="noopener"  >
+                  <span class="icon github-icon" aria-label="GitHub"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#333"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">GH</text></svg></span>
+                  GitHub Personal Repo
+                </a>
             </div>
 
             <div class="course">
